FIx align and z-index

--- a/server/modules/asset/ui/src/scss/_layout.scss
+++ b/server/modules/asset/ui/src/scss/_layout.scss
@@ -354,6 +354,7 @@ main,
 .pdl-footer {
   background-color: black;
   color: white;
+  z-index: 4;
 
   > * {
     padding: 19px;
