--- a/server/modules/book-page/ui/src/preview.scss
+++ b/server/modules/book-page/ui/src/preview.scss
@@ -65,6 +65,7 @@
     font-size: 18px;
     padding: 14px;
     color: black !important;
+    margin-top: 23px;
   }
 
   &:hover {
